Fix file path in Mall Customers analysis notebook and enhance data filtering in Auto Dashboard

--- a/project1_mall-customers/mall_customers_eda.ipynb
+++ b/project1_mall-customers/mall_customers_eda.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "# Load the dataset\n",
     "# Reading the CSV file into a pandas DataFrame\n",
-    "data = pd.read_csv('project1_mall-customers/data/mall_customers.csv')\n",
+    "data = pd.read_csv('data/mall_customers.csv')\n",
     "\n",
     "# Display first 5 rows to inspect the data\n",
     "print(data.head())\n",
